--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "livewire/flux": "^2.9.0",
         "livewire/volt": "^1.7.0",
         "spatie/laravel-activitylog": "^4.10",
-        "spatie/laravel-permission": "^6.23"
+        "spatie/laravel-permission": "^6.23",
+        "tallstackui/tallstackui": "^2.0.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
